增加聊天记录文档
